It's WIAB and not WAIB.
Signed-off-by: Paulo Pires <pjpires@gmail.com>

--- a/pom.xml
+++ b/pom.xml
@@ -37,7 +37,7 @@
     <module>migration</module>
     <module>client</module>
     <module>web-client-content</module>
-    <module>waib-distribution</module>
+    <module>wiab-distribution</module>
   </modules>
 
   <dependencyManagement>
