--- a/box/pom.xml
+++ b/box/pom.xml
@@ -92,6 +92,12 @@
       <groupId>org.eclipse.jetty</groupId>
       <artifactId>jetty-server</artifactId>
       <version>${jetty.version}</version>
+      <exclusions>
+      	<exclusion>
+      		<artifactId>javax.servlet</artifactId>
+      		<groupId>org.eclipse.jetty.orbit</groupId>
+      	</exclusion>
+      </exclusions>
     </dependency>
     <dependency>
       <groupId>org.mongodb</groupId>
@@ -170,6 +176,11 @@
       <artifactId>commons-io</artifactId>
       <version>2.3</version>
     </dependency>
+    <dependency>
+	  <groupId>javax.servlet</groupId>
+	  <artifactId>javax.servlet-api</artifactId>
+	  <version>3.0.1</version>
+    </dependency>
   </dependencies>
 
   <build>
@@ -218,50 +229,18 @@
           </execution>
         </executions>
       </plugin>
+      
       <plugin>
         <groupId>org.apache.maven.plugins</groupId>
-        <artifactId>maven-shade-plugin</artifactId>
-        <version>1.6</version>
-        <executions>
-          <execution>
-            <phase>package</phase>
-            <goals>
-              <goal>shade</goal>
-            </goals>
-            <configuration>
-              <minimizeJar>false</minimizeJar>
-              <transformers>
-                <transformer
-                  implementation="org.apache.maven.plugins.shade.resource.ManifestResourceTransformer">
-                  <mainClass>org.waveprotocol.box.server.ServerMain</mainClass>
-                </transformer>
-              </transformers>
-              <filters>
-                <filter>
-                  <artifact>org.eclipse.jetty:*</artifact>
-                  <excludes>
-                    <exclude>META-INF/ECLIPSEF.SF</exclude>
-                    <exclude>META-INF/ECLIPSEF.RSA</exclude>
-                  </excludes>
-                </filter>
-                <filter>
-                  <artifact>org.eclipse.jetty.orbit:*</artifact>
-                  <excludes>
-                    <exclude>META-INF/ECLIPSEF.SF</exclude>
-                    <exclude>META-INF/ECLIPSEF.RSA</exclude>
-                  </excludes>
-                </filter>
-              </filters>
-              <artifactSet>
-                <excludes>
-                  <exclude>org.apache.ant:*</exclude>
-                  <exclude>org.hamcrest:*</exclude>
-                  <exclude>org.mockito:*</exclude>
-                </excludes>
-              </artifactSet>
-            </configuration>
-          </execution>
-        </executions>
+        <artifactId>maven-jar-plugin</artifactId>
+        <configuration>
+          <archive>
+            <manifest>
+              <addClasspath>true</addClasspath>
+              <mainClass>org.waveprotocol.box.server.ServerMain</mainClass>
+            </manifest>
+          </archive>
+        </configuration>
       </plugin>
       <plugin>
         <groupId>org.apache.maven.plugins</groupId>
