Incremental build configuration for #8 that isolates the GWT Tests from the surefire plugin.

--- a/client/pom.xml
+++ b/client/pom.xml
@@ -64,6 +64,10 @@
       <version>2.5.1</version>
       <scope>test</scope>
     </dependency>
+    <dependency>
+      <groupId>com.google.guava</groupId>
+      <artifactId>guava-gwt</artifactId>
+    </dependency>
   </dependencies>
   <build>
     <plugins>
