--- a/box/pom.xml
+++ b/box/pom.xml
@@ -94,16 +94,16 @@
       <artifactId>jetty-server</artifactId>
       <version>${jetty.version}</version>
       <exclusions>
-      	<exclusion>
-      		<artifactId>javax.servlet</artifactId>
-      		<groupId>org.eclipse.jetty.orbit</groupId>
-      	</exclusion>
+        <exclusion>
+          <artifactId>javax.servlet</artifactId>
+          <groupId>org.eclipse.jetty.orbit</groupId>
+        </exclusion>
       </exclusions>
     </dependency>
     <dependency>
       <groupId>org.mongodb</groupId>
       <artifactId>mongo-java-driver</artifactId>
-      <version>2.4</version>
+      <version>2.7.3</version>
     </dependency>
     <dependency>
       <groupId>javax.inject</groupId>
@@ -232,11 +232,15 @@
             <phase>generate-sources</phase>
             <configuration>
               <target>
-                <taskdef name="gxpc"
+                <taskdef
+                  name="gxpc"
                   classname="com.google.gxp.compiler.ant.GxpcTask"
                   classpathref="maven.compile.classpath" />
-                <gxpc srcdir="${basedir}/src/main/java" srcpaths="${basedir}/src/main/java"
-                  destdir="${basedir}/target/generated-sources" target="org.waveprotocol.box.server.gxp"
+                <gxpc
+                  srcdir="${basedir}/src/main/java"
+                  srcpaths="${basedir}/src/main/java"
+                  destdir="${basedir}/target/generated-sources"
+                  target="org.waveprotocol.box.server.gxp"
                   i18nwarn="false" />
                 <copy todir="${basedir}/gen/main/java">
                   <fileset dir="${basedir}/target/generated-sources" />
@@ -249,7 +253,32 @@
           </execution>
         </executions>
       </plugin>
-      
+      <plugin>
+        <groupId>com.github.joelittlejohn.embedmongo</groupId>
+        <artifactId>embedmongo-maven-plugin</artifactId>
+        <version>0.1.1</version>
+        <executions>
+          <execution>
+            <id>start</id>
+            <phase>process-test-classes</phase>
+            <goals>
+              <goal>start</goal>
+            </goals>
+            <configuration>
+              <!-- see src/test/resources/org/waveprotocol/box/server/persistence/mongodb/mongodb.properties -->
+              <port>27018</port>
+              <version>2.1.1</version>
+              <databaseDirectory>${project.build.directory}/mongotest</databaseDirectory>
+            </configuration>
+          </execution>
+          <execution>
+            <id>stop</id>
+            <goals>
+              <goal>stop</goal>
+            </goals>
+          </execution>
+        </executions>
+      </plugin>
       <plugin>
         <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-jar-plugin</artifactId>
