--- a/box/pom.xml
+++ b/box/pom.xml
@@ -1,8 +1,7 @@
 <?xml version="1.0"?>
 <project
   xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd"
-  xmlns="http://maven.apache.org/POM/4.0.0"
-  xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance">
+  xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance">
   <modelVersion>4.0.0</modelVersion>
   <parent>
     <artifactId>wiab</artifactId>
@@ -232,15 +231,11 @@
             <phase>generate-sources</phase>
             <configuration>
               <target>
-                <taskdef
-                  name="gxpc"
+                <taskdef name="gxpc"
                   classname="com.google.gxp.compiler.ant.GxpcTask"
                   classpathref="maven.compile.classpath" />
-                <gxpc
-                  srcdir="${basedir}/src/main/java"
-                  srcpaths="${basedir}/src/main/java"
-                  destdir="${basedir}/target/generated-sources"
-                  target="org.waveprotocol.box.server.gxp"
+                <gxpc srcdir="${basedir}/src/main/java" srcpaths="${basedir}/src/main/java"
+                  destdir="${basedir}/target/generated-sources" target="org.waveprotocol.box.server.gxp"
                   i18nwarn="false" />
                 <copy todir="${basedir}/gen/main/java">
                   <fileset dir="${basedir}/target/generated-sources" />
@@ -249,32 +244,6 @@
             </configuration>
             <goals>
               <goal>run</goal>
-            </goals>
-          </execution>
-        </executions>
-      </plugin>
-      <plugin>
-        <groupId>com.github.joelittlejohn.embedmongo</groupId>
-        <artifactId>embedmongo-maven-plugin</artifactId>
-        <version>0.1.1</version>
-        <executions>
-          <execution>
-            <id>start</id>
-            <phase>process-test-classes</phase>
-            <goals>
-              <goal>start</goal>
-            </goals>
-            <configuration>
-              <!-- see src/test/resources/org/waveprotocol/box/server/persistence/mongodb/mongodb.properties -->
-              <port>27018</port>
-              <version>2.1.1</version>
-              <databaseDirectory>${project.build.directory}/mongotest</databaseDirectory>
-            </configuration>
-          </execution>
-          <execution>
-            <id>stop</id>
-            <goals>
-              <goal>stop</goal>
             </goals>
           </execution>
         </executions>
@@ -293,8 +262,77 @@
       </plugin>
       <plugin>
         <groupId>org.apache.maven.plugins</groupId>
+        <artifactId>maven-surefire-plugin</artifactId>
+        <version>2.12</version>
+        <configuration>
+          <excludes>
+            <exclude>org/waveprotocol/box/server/persistence/mongodb/*Test.java</exclude>
+            <exclude>**/*LargeTest.java</exclude>
+            <exclude>**/*GwtTest.java</exclude>
+          </excludes>
+        </configuration>
+      </plugin>
+      <plugin>
+        <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-source-plugin</artifactId>
       </plugin>
     </plugins>
   </build>
+
+  <profiles>
+    <profile>
+      <id>mondodb-tests</id>
+      <build>
+        <plugins>
+          <plugin>
+            <groupId>com.github.joelittlejohn.embedmongo</groupId>
+            <artifactId>embedmongo-maven-plugin</artifactId>
+            <version>0.1.1</version>
+            <executions>
+              <execution>
+                <id>start</id>
+                <phase>process-test-classes</phase>
+                <goals>
+                  <goal>start</goal>
+                </goals>
+                <configuration>
+                  <!-- see src/test/resources/org/waveprotocol/box/server/persistence/mongodb/mongodb.properties -->
+                  <port>27018</port>
+                  <version>2.1.1</version>
+                  <databaseDirectory>${project.build.directory}/mongotest</databaseDirectory>
+                </configuration>
+              </execution>
+              <execution>
+                <id>stop</id>
+                <goals>
+                  <goal>stop</goal>
+                </goals>
+              </execution>
+            </executions>
+          </plugin>
+          <plugin>
+            <groupId>org.apache.maven.plugins</groupId>
+            <artifactId>maven-surefire-plugin</artifactId>
+            <executions>
+              <execution>
+                <id>mondodb-tests</id>
+                <configuration>
+                  <!-- This is needed to overried the default excludes defined above. -->
+                  <excludes>
+                    <exclude></exclude>
+                  </excludes>
+                  <includes>
+                    <include>**/server/persistence/mongodb/**/*Test.java</include>
+                  </includes>
+                </configuration>
+                <goals>
+                  <goal>test</goal>
+                </goals>
+              </execution>
+            </executions>
+          </plugin>
+        </plugins>
+      </build>
+    </profile>
+  </profiles>
 </project>
