--- a/pom.xml
+++ b/pom.xml
@@ -253,6 +253,7 @@
               <phase>package</phase>
               <goals>
                 <goal>jar-no-fork</goal>
+                <goal>test-jar-no-fork</goal>
               </goals>
             </execution>
           </executions>
@@ -280,6 +281,13 @@
           <groupId>org.apache.maven.plugins</groupId>
           <artifactId>maven-jar-plugin</artifactId>
           <version>2.4</version>
+          <executions>
+            <execution>
+              <goals>
+                <goal>test-jar</goal>
+              </goals>
+            </execution>
+          </executions>
         </plugin>
         <plugin>
           <groupId>org.dstovall</groupId>
@@ -291,7 +299,17 @@
           <artifactId>gwt-maven-plugin</artifactId>
           <version>2.4.0</version>
         </plugin>
-         <plugin>
+        <plugin>
+        <groupId>org.apache.maven.plugins</groupId>
+        <artifactId>maven-surefire-plugin</artifactId>
+        <configuration>
+          <excludes>
+            <exclude>**/*GwtTest*.java</exclude>
+            <exclude>**/*LargeTest.java</exclude>
+          </excludes>
+        </configuration>
+      </plugin>
+        <plugin>
           <groupId>org.eclipse.m2e</groupId>
           <artifactId>lifecycle-mapping</artifactId>
           <version>1.0.0</version>
@@ -314,37 +332,99 @@
                   </action>
                 </pluginExecution>
                 <pluginExecution>
-                	<pluginExecutionFilter>
-                		<groupId>org.codehaus.mojo</groupId>
-                		<artifactId>properties-maven-plugin</artifactId>
-                		<versionRange>[1.0-alpha-2,)</versionRange>
-                		<goals>
-                			<goal>read-project-properties</goal>
-                		</goals>
-                	</pluginExecutionFilter>
-                	<action>
-                		<execute>
-                      		<runOnIncremental>false</runOnIncremental>
-                    	</execute>
-                	</action>
+                  <pluginExecutionFilter>
+                    <groupId>org.codehaus.mojo</groupId>
+                    <artifactId>properties-maven-plugin</artifactId>
+                    <versionRange>[1.0-alpha-2,)</versionRange>
+                    <goals>
+                      <goal>read-project-properties</goal>
+                    </goals>
+                  </pluginExecutionFilter>
+                  <action>
+                    <execute>
+                      <runOnIncremental>false</runOnIncremental>
+                    </execute>
+                  </action>
+                </pluginExecution>
+                <pluginExecution>
+                  <pluginExecutionFilter>
+                    <groupId>
+                      com.github.joelittlejohn.embedmongo
+                    </groupId>
+                    <artifactId>embedmongo-maven-plugin</artifactId>
+                    <versionRange>[0.1.1,)</versionRange>
+                    <goals>
+                      <goal>start</goal>
+                    </goals>
+                  </pluginExecutionFilter>
+                  <action>
+                    <ignore></ignore>
+                  </action>
                 </pluginExecution>
               </pluginExecutions>
             </lifecycleMappingMetadata>
           </configuration>
         </plugin>
-        <plugin>
-          <groupId>org.apache.maven.plugins</groupId>
-          <artifactId>maven-surefire-plugin</artifactId>
-          <configuration>
-            <excludes>
-              <exclude>**/*GwtTest*.java</exclude>
-              <exclude>**/*Gwt*Suite*.java</exclude>
-            </excludes>
-          </configuration>
-        </plugin>
       </plugins>
     </pluginManagement>
   </build>
+
+  <profiles>
+    <profile>
+      <id>gwt-tests</id>
+      <build>
+        <plugins>
+          <plugin>
+            <groupId>org.codehaus.mojo</groupId>
+            <artifactId>gwt-maven-plugin</artifactId>
+            <executions>
+              <execution>
+                <id>gwt-tests</id>
+                <configuration>
+                  <!-- This is needed to overried the default excludes defined above. -->
+                  <excludes>
+                  </excludes>
+                  <includes>**/*GwtTest*.java</includes>
+                </configuration>
+                <goals>
+                  <goal>test</goal>
+                </goals>
+                <phase>test</phase>
+              </execution>
+            </executions>
+          </plugin>
+        </plugins>
+      </build>
+    </profile>
+    <profile>
+      <id>large-tests</id>
+      <build>
+        <plugins>
+          <plugin>
+            <groupId>org.apache.maven.plugins</groupId>
+            <artifactId>maven-surefire-plugin</artifactId>
+            <executions>
+              <execution>
+                <id>large-tests</id>
+                <configuration>
+                  <!-- This is needed to overried the default excludes defined above. -->
+                  <excludes>
+                    <exclude></exclude>
+                  </excludes>
+                  <includes>
+                    <include>**/*LargeTest.java</include>
+                  </includes>
+                </configuration>
+                <goals>
+                  <goal>test</goal>
+                </goals>
+              </execution>
+            </executions>
+          </plugin>
+        </plugins>
+      </build>
+    </profile>
+  </profiles>
 
   <pluginRepositories>
     <pluginRepository>
