Fixed some plugins version.
Signed-off-by: Paulo Pires <pjpires@gmail.com>

--- a/pom.xml
+++ b/pom.xml
@@ -245,6 +245,11 @@
       <plugins>
         <plugin>
           <groupId>org.apache.maven.plugins</groupId>
+          <artifactId>maven-clean-plugin</artifactId>
+          <version>2.5</version>
+        </plugin>
+        <plugin>
+          <groupId>org.apache.maven.plugins</groupId>
           <artifactId>maven-source-plugin</artifactId>
           <version>2.1.2</version>
           <executions>
@@ -309,6 +314,7 @@
           </excludes>
         </configuration>
       </plugin>
+          <version>2.12</version>
         <plugin>
           <groupId>org.eclipse.m2e</groupId>
           <artifactId>lifecycle-mapping</artifactId>
