--- a/pom.xml
+++ b/pom.xml
@@ -1,5 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+<project
+  xmlns="http://maven.apache.org/POM/4.0.0"
+  xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
   xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
   <modelVersion>4.0.0</modelVersion>
   <groupId>org.waveprotocol.box</groupId>
@@ -295,26 +297,22 @@
           </executions>
         </plugin>
         <plugin>
-          <groupId>org.dstovall</groupId>
-          <artifactId>onejar-maven-plugin</artifactId>
-          <version>1.4.4</version>
-        </plugin>
-        <plugin>
           <groupId>org.codehaus.mojo</groupId>
           <artifactId>gwt-maven-plugin</artifactId>
           <version>2.4.0</version>
         </plugin>
         <plugin>
-        <groupId>org.apache.maven.plugins</groupId>
-        <artifactId>maven-surefire-plugin</artifactId>
-        <configuration>
-          <excludes>
-            <exclude>**/*GwtTest*.java</exclude>
-            <exclude>**/*LargeTest.java</exclude>
-          </excludes>
-        </configuration>
-      </plugin>
+          <groupId>org.apache.maven.plugins</groupId>
+          <artifactId>maven-surefire-plugin</artifactId>
           <version>2.12</version>
+          <configuration>
+            <excludes>
+              <exclude>**/*GwtTest*.java</exclude>
+              <exclude>**/*LargeTest.java</exclude>
+              <exclude>**/mongodb/**/*Test.java</exclude>
+            </excludes>
+          </configuration>
+        </plugin>
         <plugin>
           <groupId>org.eclipse.m2e</groupId>
           <artifactId>lifecycle-mapping</artifactId>
@@ -387,7 +385,8 @@
               <execution>
                 <id>gwt-tests</id>
                 <configuration>
-                  <!-- This is needed to overried the default excludes defined above. -->
+                  <!-- This is needed to overried the default excludes defined 
+                    above. -->
                   <excludes>
                   </excludes>
                   <includes>**/*GwtTest*.java</includes>
@@ -413,12 +412,42 @@
               <execution>
                 <id>large-tests</id>
                 <configuration>
-                  <!-- This is needed to overried the default excludes defined above. -->
+                  <!-- This is needed to overried the default excludes defined 
+                    above. -->
                   <excludes>
                     <exclude></exclude>
                   </excludes>
                   <includes>
                     <include>**/*LargeTest.java</include>
+                  </includes>
+                </configuration>
+                <goals>
+                  <goal>test</goal>
+                </goals>
+              </execution>
+            </executions>
+          </plugin>
+        </plugins>
+      </build>
+    </profile>
+    <profile>
+      <id>mongodb-tests</id>
+      <build>
+        <plugins>
+          <plugin>
+            <groupId>org.apache.maven.plugins</groupId>
+            <artifactId>maven-surefire-plugin</artifactId>
+            <executions>
+              <execution>
+                <id>mongodb-tests</id>
+                <configuration>
+                  <!-- This is needed to overried the default excludes defined 
+                    above. -->
+                  <excludes>
+                    <exclude></exclude>
+                  </excludes>
+                  <includes>
+                    <include>**/mongodb/**/*Test.java</include>
                   </includes>
                 </configuration>
                 <goals>
