--- a/proto/pom.xml
+++ b/proto/pom.xml
@@ -1,7 +1,8 @@
 <?xml version="1.0"?>
 <project
   xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd"
-  xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance">
+  xmlns="http://maven.apache.org/POM/4.0.0"
+  xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance">
   <modelVersion>4.0.0</modelVersion>
   <parent>
     <artifactId>wiab</artifactId>
@@ -41,6 +42,37 @@
               <files>
                 <file>${basedir}/../build-proto.properties</file>
               </files>
+              <quiet>true</quiet>
+            </configuration>
+          </execution>
+        </executions>
+      </plugin>
+      <plugin>
+        <groupId>org.apache.maven.plugins</groupId>
+        <artifactId>maven-enforcer-plugin</artifactId>
+        <version>1.1</version>
+        <executions>
+          <execution>
+            <id>enforce-property</id>
+            <phase>generate-sources</phase>
+            <goals>
+              <goal>enforce</goal>
+            </goals>
+            <configuration>
+              <rules>
+                <requireProperty>
+                  <property>protoc_dist</property>
+                  <message>You must edit build-proto.properties and set
+                    the protoc distribution path!</message>
+                </requireProperty>
+                <requireFilesExist>
+                  <files>
+                    <file>${protoc_dist}/bin/protoc</file>
+                  </files>
+                  <message>Couldn't find protoc executable at ${protoc_dist}.</message>
+                </requireFilesExist>
+              </rules>
+              <fail>true</fail>
             </configuration>
           </execution>
         </executions>
@@ -53,12 +85,15 @@
             <configuration>
               <target>
                 <property name="src.dir" value="${basedir}/src/main/proto" />
-                <property name="gen.dir"
-                  value="${project.build.directory}/generated-sources" />
+                <property name="gen.dir" value="${project.build.directory}/generated-sources" />
                 <property name="protoc" value="protoc" />
                 <!-- Macros. -->
-                <macrodef name="protoc" description="Runs the protobuf compiler">
-                  <attribute name="proto" description="The protobuf source" />
+                <macrodef
+                  name="protoc"
+                  description="Runs the protobuf compiler">
+                  <attribute
+                    name="proto"
+                    description="The protobuf source" />
                   <sequential>
                     <exec executable="${protoc}">
                       <arg value="--proto_path=${src.dir}" />
