--- a/box/pom.xml
+++ b/box/pom.xml
@@ -31,6 +31,11 @@
     </dependency>
     <dependency>
       <groupId>org.waveprotocol.box</groupId>
+      <artifactId>proto-st</artifactId>
+      <version>${project.version}</version>
+    </dependency>
+    <dependency>
+      <groupId>org.waveprotocol.box</groupId>
       <artifactId>crypto</artifactId>
       <version>${project.version}</version>
     </dependency>
@@ -218,8 +223,7 @@
             </goals>
             <configuration>
               <sources>
-                <source>src/main/java</source>
-                <source>gen/main/java</source>
+                <source>${project.build.directory}/generated-sources</source>
               </sources>
             </configuration>
           </execution>
@@ -242,9 +246,6 @@
                   destdir="${basedir}/target/generated-sources"
                   target="org.waveprotocol.box.server.gxp"
                   i18nwarn="false" />
-                <copy todir="${basedir}/gen/main/java">
-                  <fileset dir="${basedir}/target/generated-sources" />
-                </copy>
               </target>
             </configuration>
             <goals>
