--- a/web-client-content/pom.xml
+++ b/web-client-content/pom.xml
@@ -54,6 +54,17 @@
     </dependency>
     <dependency>
       <groupId>org.waveprotocol.box</groupId>
+      <artifactId>proto-st</artifactId>
+      <version>${project.version}</version>
+    </dependency>
+    <dependency>
+      <groupId>org.waveprotocol.box</groupId>
+      <artifactId>proto-st</artifactId>
+      <version>${project.version}</version>
+      <classifier>sources</classifier>
+    </dependency>
+    <dependency>
+      <groupId>org.waveprotocol.box</groupId>
       <artifactId>crypto</artifactId>
       <version>${project.version}</version>
     </dependency>
