--- a/build-proto.properties
+++ b/build-proto.properties
@@ -3,4 +3,4 @@
 # protoc_dist=/usr
 
 # Mac OS X with protobuf installed with brew
-# protoc_dist=/usr/local/Cellar/protobuf/2.4.1
+protoc_dist=/usr/local/Cellar/protobuf/2.4.1
