String-template parser was moved to a project of its own. It is no longer included in the 'box' JAR. Fixes #10
Signed-off-by: Paulo Pires <pjpires@gmail.com>

--- a/pom.xml
+++ b/pom.xml
@@ -30,6 +30,7 @@
 
   <modules>
     <module>proto</module>
+    <module>proto-st-parser</module>
     <module>proto-st</module>
     <module>wave-api</module>
     <module>model</module>
