--- a/proto-st/pom.xml
+++ b/proto-st/pom.xml
@@ -22,30 +22,8 @@
   <dependencies>
     <dependency>
       <groupId>org.waveprotocol.box</groupId>
-      <artifactId>communication</artifactId>
+      <artifactId>proto-st-parser</artifactId>
       <version>${project.version}</version>
-    </dependency>
-    <dependency>
-      <groupId>org.waveprotocol.box</groupId>
-      <artifactId>proto</artifactId>
-      <version>${project.version}</version>
-    </dependency>
-    <dependency>
-      <groupId>com.google.protobuf</groupId>
-      <artifactId>protobuf-java</artifactId>
-    </dependency>
-    <dependency>
-      <groupId>com.google.guava</groupId>
-      <artifactId>guava</artifactId>
-    </dependency>
-    <dependency>
-      <groupId>commons-cli</groupId>
-      <artifactId>commons-cli</artifactId>
-    </dependency>
-    <dependency>
-      <groupId>org.antlr</groupId>
-      <artifactId>stringtemplate</artifactId>
-      <version>3.2</version>
     </dependency>
   </dependencies>
 
@@ -53,45 +31,12 @@
     <plugins>
       <plugin>
         <groupId>org.codehaus.mojo</groupId>
-        <artifactId>build-helper-maven-plugin</artifactId>
-        <version>1.7</version>
-        <executions>
-          <execution>
-            <id>add-source</id>
-            <phase>generate-sources</phase>
-            <goals>
-              <goal>add-source</goal>
-            </goals>
-            <configuration>
-              <sources>
-                <source>${project.build.directory}/generated-sources</source>
-              </sources>
-            </configuration>
-          </execution>
-        </executions>
-      </plugin>
-      <plugin>
-        <groupId>org.apache.maven.plugins</groupId>
-        <artifactId>maven-jar-plugin</artifactId>
-        <configuration>
-          <archive>
-            <manifest>
-              <mainClass>org.waveprotocol.pst.PstMain</mainClass>
-            </manifest>
-          </archive>
-          <excludes>
-            <exclude>/org/waveprotocol/pst/**/*</exclude>
-          </excludes>
-        </configuration>
-      </plugin>
-      <plugin>
-        <groupId>org.codehaus.mojo</groupId>
         <artifactId>exec-maven-plugin</artifactId>
         <version>1.2.1</version>
         <executions>
           <execution>
             <id>WaveClientRpc</id>
-            <phase>package</phase>
+            <phase>generate-sources</phase>
             <goals>
               <goal>java</goal>
             </goals>
@@ -102,7 +47,7 @@
           </execution>
           <execution>
             <id>SearchProto</id>
-            <phase>package</phase>
+            <phase>generate-sources</phase>
             <goals>
               <goal>java</goal>
             </goals>
@@ -113,7 +58,7 @@
           </execution>
           <execution>
             <id>ProfilesProto</id>
-            <phase>package</phase>
+            <phase>generate-sources</phase>
             <goals>
               <goal>java</goal>
             </goals>
@@ -124,7 +69,7 @@
           </execution>
           <execution>
             <id>Rpc</id>
-            <phase>package</phase>
+            <phase>generate-sources</phase>
             <goals>
               <goal>java</goal>
             </goals>
@@ -135,7 +80,7 @@
           </execution>
           <execution>
             <id>FederationProto</id>
-            <phase>package</phase>
+            <phase>generate-sources</phase>
             <goals>
               <goal>java</goal>
             </goals>
@@ -146,7 +91,7 @@
           </execution>
           <execution>
             <id>ConcurrencyControlCS</id>
-            <phase>package</phase>
+            <phase>generate-sources</phase>
             <goals>
               <goal>java</goal>
             </goals>
@@ -157,7 +102,7 @@
           </execution>
           <execution>
             <id>Diff</id>
-            <phase>package</phase>
+            <phase>generate-sources</phase>
             <goals>
               <goal>java</goal>
             </goals>
@@ -171,6 +116,25 @@
       <plugin>
         <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-source-plugin</artifactId>
+      </plugin>
+      <plugin>
+        <groupId>org.codehaus.mojo</groupId>
+        <artifactId>build-helper-maven-plugin</artifactId>
+        <version>1.7</version>
+        <executions>
+          <execution>
+            <id>add-source</id>
+            <phase>generate-sources</phase>
+            <goals>
+              <goal>add-source</goal>
+            </goals>
+            <configuration>
+              <sources>
+                <source>${genFolder}</source>
+              </sources>
+            </configuration>
+          </execution>
+        </executions>
       </plugin>
     </plugins>
   </build>
