--- a/wiab-distribution/src/main/config/server.config
+++ b/wiab-distribution/src/main/config/server.config
@@ -1,5 +1,17 @@
+# Licensed under the Apache License, Version 2.0 (the "License");
+# you may not use this file except in compliance with the License.
+# You may obtain a copy of the License at
+#
+#      http://www.apache.org/licenses/LICENSE-2.0
+#
+# Unless required by applicable law or agreed to in writing, software
+# distributed under the License is distributed on an "AS IS" BASIS,
+# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
+# See the License for the specific language governing permissions and
+# limitations under the License.W
+
 # Core Configuration for the Wave in a Box server
-# 
+#
 # Run "ant -f server-config.xml" to generate the server.config file automatically.
 # To override default values pass them to the ant script. For example
 # to override wave_server_domain run: ant -f server-config.xml -Dwave_server_domain=example.com
@@ -13,6 +25,17 @@ wave_server_domain = local.net
 # Each address is a comma separated host:port pair.
 # Default value: localhost:9898
 http_frontend_public_address = localhost:9898
+
+# A optional host:port address on which to listen for websocket connections.
+# If no value is set for http_websocket_public_address it defaults to the first address specified
+# by http_frontend_public_address.
+# Default value: localhost:9898
+http_websocket_public_address = localhost:9898
+
+# An optional host:port address for which the client is told to attempt websocket connections.
+# If no value is set for http_websocket_presented_address it defaults to http_websocket_public_address
+# Default value: localhost:9898
+http_websocket_presented_address = localhost:9898
 
 # Default value: values passed to http_frontend_public_address.
 http_frontend_addresses = localhost:9898
@@ -71,9 +94,13 @@ delta_store_directory = _deltas
 # Default value: _sessions
 sessions_store_directory = _sessions
 
-# Set false to use raw WebSockets instead of Socket.IO (still a bit experimental) in the webclient
-# Default value: true
-use_socketio = true
+# The time in ms that the websocket connection can be idle before closing
+# Default value: 0
+websocket_max_idle_time = 0
+
+# Maximum websocket message size to be received in MB
+# Default value: 2
+websocket_max_message_size = 2
 
 # Note: the default value for admin is an invalid user id that cannot be registered.
 # To become an admin: Register a user and set its address as the value below.
@@ -135,9 +162,14 @@ ssl_keystore_path = wiab.ks
 # Note: this is only used when enable_ssl set to true.
 ssl_keystore_password = changeme
 
-# Enable import of waves via /import URL.
-# Default value: false
-enable_import = false
+# Enable client x509 cert. authentication?
+enable_clientauth = false
+
+# Domain of the email to look for as email field of x509 client auth certificates when using client authentication
+clientauth_cert_domain =
+
+# Disable login page to force x509-only authentication
+disable_loginpage = false
 
 # Currently supported search types: memory, lucene.
 # Default value: lucene.
@@ -152,3 +184,8 @@ index_directory = _indexes
  # Google Analytics account.
  # Default value: empty
 analytics_account = 
+
+# Directory that holds the thumbnails for attachments.
+# Icon must be in PNG format, and named as MIME type with replacing '/' to '_'.
+# For example thumbnail file for ZIP format (MIME type application/zip) must be named application_zip.
+thumbnail_patterns_directory = thumbnail_patterns
