--- a/client/pom.xml
+++ b/client/pom.xml
@@ -15,6 +15,11 @@
   <dependencies>
     <dependency>
       <groupId>org.waveprotocol.box</groupId>
+      <artifactId>proto-st</artifactId>
+      <version>${project.version}</version>
+    </dependency>
+    <dependency>
+      <groupId>org.waveprotocol.box</groupId>
       <artifactId>model</artifactId>
       <version>${project.version}</version>
     </dependency>
