--- a/wave-api/pom.xml
+++ b/wave-api/pom.xml
@@ -16,6 +16,11 @@
   <dependencies>
     <dependency>
       <groupId>org.waveprotocol.box</groupId>
+      <artifactId>media</artifactId>
+      <version>${project.version}</version>
+    </dependency>
+    <dependency>
+      <groupId>org.waveprotocol.box</groupId>
       <artifactId>model</artifactId>
       <version>${project.version}</version>
     </dependency>
